Exporting view controller architecture, sending email without attachment

--- a/QPest/IdentificationStoryboard.storyboard
+++ b/QPest/IdentificationStoryboard.storyboard
@@ -141,6 +141,91 @@
             </objects>
             <point key="canvasLocation" x="-484" y="-257"/>
         </scene>
+        <!--Export View Controller-->
+        <scene sceneID="snJ-sr-q95">
+            <objects>
+                <viewController id="bnF-sV-fTs" customClass="ExportViewController" customModule="QPest" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3RJ-Mi-vW6"/>
+                        <viewControllerLayoutGuide type="bottom" id="Vd6-Rh-p9s"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="P5c-oL-77y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="po3-Zt-MEr">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="33" id="Hoj-6y-HRR"/>
+                                    <constraint firstAttribute="height" constant="33" id="znQ-gc-QsW"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="exitCameraButton"/>
+                                <connections>
+                                    <action selector="didClickBack:" destination="u0M-yy-wxA" eventType="touchUpInside" id="opE-Dt-UY9"/>
+                                    <action selector="didClickExit:" destination="bnF-sV-fTs" eventType="touchUpInside" id="I0A-1m-d3y"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Bn-Le-Rak">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="5tk-d1-AuC"/>
+                                    <constraint firstAttribute="width" constant="229" id="uR6-zm-AVH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="Exportar">
+                                    <color key="titleColor" red="0.8901960784313725" green="0.38431372549019605" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="didClickExport:" destination="bnF-sV-fTs" eventType="touchUpInside" id="iia-Md-eLj"/>
+                                </connections>
+                            </button>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2ee-iX-Pyi">
+                                <color key="backgroundColor" red="0.96693212342306323" green="1" blue="0.97280643756564533" alpha="0.0" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="6Aj-kx-09t"/>
+                                    <constraint firstAttribute="height" constant="248" id="oCJ-Oy-3aN"/>
+                                </constraints>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JA3-iu-w0z">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="Qbc-VB-QeT"/>
+                                    <constraint firstAttribute="width" constant="375" id="tGz-eY-xdZ"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Escolha o tipo de arquivo de exportação">
+                                        <attributes>
+                                            <color key="NSBackgroundColor" red="1" green="1" blue="0.97280643756564533" alpha="0.0" colorSpace="calibratedRGB"/>
+                                            <color key="NSColor" red="0.9986665314119294" green="1" blue="0.97670762523437715" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" metaFont="system" size="17"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.38431372549019605" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="5Bn-Le-Rak" firstAttribute="leading" secondItem="P5c-oL-77y" secondAttribute="leadingMargin" constant="57" id="Bjd-uo-wRS"/>
+                            <constraint firstItem="2ee-iX-Pyi" firstAttribute="leading" secondItem="P5c-oL-77y" secondAttribute="leading" id="F6d-11-DAL"/>
+                            <constraint firstAttribute="trailing" secondItem="JA3-iu-w0z" secondAttribute="trailing" id="Gi3-TZ-Isk"/>
+                            <constraint firstAttribute="trailing" secondItem="2ee-iX-Pyi" secondAttribute="trailing" id="JFL-i8-nIB"/>
+                            <constraint firstItem="JA3-iu-w0z" firstAttribute="leading" secondItem="P5c-oL-77y" secondAttribute="leading" id="QRB-BM-Cty"/>
+                            <constraint firstItem="JA3-iu-w0z" firstAttribute="top" secondItem="po3-Zt-MEr" secondAttribute="bottom" constant="119" id="VyD-xF-nXo"/>
+                            <constraint firstItem="Vd6-Rh-p9s" firstAttribute="top" secondItem="5Bn-Le-Rak" secondAttribute="bottom" constant="60" id="WJt-FI-tcm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5Bn-Le-Rak" secondAttribute="trailing" constant="57" id="hLr-vG-0ie"/>
+                            <constraint firstItem="2ee-iX-Pyi" firstAttribute="top" secondItem="po3-Zt-MEr" secondAttribute="bottom" constant="171" id="nTW-zB-Ayz"/>
+                            <constraint firstItem="po3-Zt-MEr" firstAttribute="leading" secondItem="P5c-oL-77y" secondAttribute="leadingMargin" id="qmS-RM-I3T"/>
+                            <constraint firstItem="po3-Zt-MEr" firstAttribute="top" secondItem="3RJ-Mi-vW6" secondAttribute="bottom" constant="8" id="swa-9o-KQ3"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="pickerView" destination="2ee-iX-Pyi" id="Eyw-a8-L8U"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mXZ-nu-ZQ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1946.4000000000001" y="1144.6776611694154"/>
+        </scene>
         <!--General Info Main View Controller-->
         <scene sceneID="sWA-55-qa7">
             <objects>
@@ -180,6 +265,7 @@
                     <connections>
                         <outlet property="tableView" destination="883-cX-mTB" id="UHL-fI-69R"/>
                         <segue destination="rq6-6h-OSn" kind="presentation" identifier="goGraph" id="RnA-ne-ML8"/>
+                        <segue destination="bnF-sV-fTs" kind="presentation" identifier="goExport" id="HEa-jT-LDq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="86I-Md-hSK" userLabel="First Responder" sceneMemberID="firstResponder"/>
